@@ -1,5 +1,7 @@
-2017-11-15
+2018-02-24
 on GitHub
+   - Update defaults of power.2stage.in in order to be consistent with 
+     Paper from Maurer et al (2018)
    - Aliases power.tsd.xyz introduced (not public yet)
    - Experimental function power.tsd.2m() to deal with 2 PK metrics
      in the TSD decision scheme Potvin "B"
